# django-vite-plugin

./: .gitignore  README.md
.github/workflows/: publish-to-npm.yml  publish-to-pypi.yml
django/: .gitignore  LICENSE  README.md  pyproject.toml
django/src/django_vite_plugin/: cache.py  config_helper.py  constants.py  html.py  manifest.py  urls.py  utils.py
django/src/django_vite_plugin/management/commands/: django_vite_plugin.py  utils.py
django/src/django_vite_plugin/templatetags/: nodes.py  utils.py  vite.py
example/: .gitignore  README.md  jsconfig.json  package.json  vite.config.js
example/config/: settings.py  settings2.py  urls.py
example/custom_build/config/: asgi.py  settings.py  urls.py  wsgi.py
example/custom_build/frontend/: apps.py  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
example/home/: models.py  urls.py  views.py
example/home/templates/: index.html
example/home/templatetags/: html.py
example/multi_app/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
example/multi_app/app1/: apps.py
example/nested_test/: pnpm-lock.yaml  tailwind.config.js  vite.config.js
example/output/: jsconfig.json  package.json  tailwind.config.js
example/react/: jsconfig.json  manage.py  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
example/stderr/: package.json  pnpm-lock.yaml  vite.config.js
vite/: .gitignore  .styleci.yml  CHANGELOG.md  LICENSE.md  README.md  package.json  tsconfig.json
vite/script/: build.ts
vite/src/: config.ts  helpers.ts  index.ts  info.html
(+42 files in other folders)
